--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  height: 75px;
+  height: 70px;
   color: #fff;
   z-index: 99;
   position: sticky;
@@ -30,7 +30,7 @@
 }
 
 .header .logo {
-  width: 75px;
+  width: 70px;
 }
 
 .header .navbar {
@@ -40,10 +40,14 @@
 }
 
 .header .login i {
-  margin: 0 15px 0;
+  margin: 0 5px 0;
   font-size: 1.1rem;
   color: rgba(255, 255, 255, 0.352);
   transition: all ease .3s;
+}
+
+.user-right {
+  margin-left: 15px;
 }
 
 .header .login i:hover {
@@ -59,9 +63,13 @@
 .fa-bars,
 .fa-magnifying-glass {
   font-size: 1.1rem;
-  margin: 0 15px 0;
+  margin: 0 5px 0;
   color: rgba(255, 255, 255, 0.352);
   transition: all ease .3s;
+}
+
+.menuLeft {
+  margin-right: 15px;
 }
 
 .fa-magnifying-glass:hover {
@@ -78,12 +86,13 @@
 
 .hamburgerMenuContainer {
   width: 100%;
-  position: fixed;
-  top: 10%;
+  position: absolute;
+  top: 70px;
   right: 0;
   background: #505050f7;
-  transform: translateY(-150%);
   z-index: 10;
+  height: 0;
+  overflow: hidden;
   transition: all ease .4s;
 }
 
@@ -117,8 +126,34 @@
   font-size: .9rem;
 }
 
-
 .hamburgerMenuOpen {
+  animation: hamburgerMenu ease .4s forwards;
+}
+
+.hamburgerMenuClose {
+  animation: hamburgerMenuClose ease .4s forwards;
+}
+
+@keyframes hamburgerMenu {
+  0% {
+    height: 0;
+  }
+  100% {
+    height: 250px;
+  }
+}
+
+@keyframes hamburgerMenuClose {
+  0% {
+    height: 250px;
+  }
+  100% {
+    height: 0;
+  }
+}
+
+
+/* .hamburgerMenuOpen {
   animation: hamburgerMenuOpen .3s ease forwards;
 }
 
@@ -142,7 +177,7 @@
   100% {
     transform: translateY(-150%);
   }
-}
+} */
 
 @media screen and (max-width: 660px) {
   .fa-user, .fa-bell, .fa-magnifying-glass, .hamburgerMenu, .logo {
