--- a/style.css
+++ b/style.css
@@ -3,10 +3,17 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  user-select: none;
 }
 
 .header {
   background: #444;
+  width: auto;
+  height: auto;
+  transition: all ease .2s;
+}
+
+.width-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,6 +25,8 @@
   top: 0;
   left: 0;
   right: 0;
+  transition: all ease .2s;
+  margin: 0 auto;
 }
 
 .header a {
@@ -31,6 +40,7 @@
 
 .header .logo {
   width: 70px;
+  padding-top: 6px;
 }
 
 .header .navbar {
@@ -81,7 +91,6 @@
   padding: 7px 10px;
   color: #fff;
   border-radius: 3px;
-  cursor: pointer;
 }
 
 .hamburgerMenuContainer {
@@ -99,7 +108,7 @@
 .hamburgerMenuContainer li a {
   display: flex;
   align-items: center;
-  padding: 20px;
+  padding: 15px 20px;
   text-decoration: none;
   color: #fff;
 }
@@ -118,7 +127,7 @@
 }
 
 .hamburgerMenuContainer img {
-  width: 20px;
+  width: 15px;
 }
 
 .hamburgerMenuContainer p {
@@ -138,15 +147,17 @@
   0% {
     height: 0;
   }
+
   100% {
-    height: 250px;
+    height: 205px;
   }
 }
 
 @keyframes hamburgerMenuClose {
   0% {
-    height: 250px;
+    height: 205px;
   }
+
   100% {
     height: 0;
   }
@@ -179,10 +190,142 @@
   }
 } */
 
+.header .user-container {
+  display: none;
+}
+
 @media screen and (max-width: 660px) {
-  .fa-user, .fa-bell, .fa-magnifying-glass, .hamburgerMenu, .logo {
+
+  .fa-user,
+  .fa-bell,
+  .fa-magnifying-glass,
+  .hamburgerMenu,
+  .logo {
     cursor: default;
   }
 }
 
+@media screen and (min-width: 780px) {
+  .width-container {
+    width: 720px;
+  }
+}
 
+@media screen and (min-width: 1000px) {
+  .width-container {
+    width: 920px;
+  }
+
+  .header .logo-container {
+    order: 3;
+  }
+
+  .header .navbar {
+    display: none;
+  }
+
+  .hamburgerMenuContainer {
+    height: fit-content;
+    position: static;
+    width: auto;
+    top: 0;
+    right: 0;
+    background: none;
+    height: auto;
+  }
+
+  .hamburgerMenuContainer ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: auto;
+  }
+
+  .hamburgerMenuContainer li:not(:last-child) {
+    border-bottom: none;
+  }
+
+  .hamburgerMenuClose {
+    animation: none;
+  }
+
+  .hamburgerMenuOpen {
+    animation: none;
+  }
+
+  .hamburgerMenuContainer li a {
+    padding: 23px 10px;
+    margin: 0 3px;
+  }
+
+  .hamburgerMenuContainer li a:first-child {
+    margin: 0;
+  }
+
+  .hamburgerMenuContainer li a img {
+    width: 16px;
+  }
+
+  .hamburgerMenuContainer li::after {
+    content: '';
+    width: 1px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    border-left: 1px solid rgba(0, 0, 0, .2);
+    border-right: 1px solid hsla(0, 0%, 100%, .1);
+  }
+
+  .logo-container::after,
+  .logo-container::before {
+    content: '';
+    width: 1px;
+    height: 100%;
+    position: absolute;
+    top: 0px;
+    border-left: 1px solid rgba(0, 0, 0, 0.134);
+    border-right: 1px solid rgba(255, 255, 255, 0.066);
+  }
+  .header .logo {
+    margin: 18px;
+  }
+  .header .login {
+    position: relative;
+    right: 84px;
+    display: flex;
+    align-items: center;
+  }
+  .header .user {
+    display: none;
+
+  }
+  .header .login .user-container {
+    display: flex;
+    align-items: center;
+    background: #5a5959;
+    padding: 10px;
+    border-radius: 4px;
+    box-shadow: 0 3px 0px #363434;
+    cursor: pointer;
+    transition: all ease .2s;
+  }
+  .header .login .user-container:hover {
+    background: #656565;
+  }
+  .user-container span {
+    font-size: .6rem;
+    padding-left: 30px;
+  }
+  .header .user-container .fa-solid {
+    font-size: .8rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .width-container {
+    width: 1200px;
+  }
+  .header .login {
+    right: 220px;
+  }
+}
