--- a/style.css
+++ b/style.css
@@ -797,7 +797,7 @@
   padding: 36px 0;
   border-top: 1px solid rgba(51, 51, 51, 0.162);
   border-bottom: 1px solid rgba(51, 51, 51, 0.162);
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
 
@@ -1170,6 +1170,10 @@
   .Landing .last {
     flex: 35;
     margin-top: 46px;
+  }
+
+  .aboutSection {
+    display: flex;
   }
 
 }
