--- a/style.css
+++ b/style.css
@@ -610,7 +610,7 @@
   border: 1px solid rgba(51, 51, 51, 0.162);
   border-radius: 3px;
   margin: 20px;
-  padding: 18px 15px;
+  padding: 15px;
   position: relative;
   text-decoration: none;
   display: block;
