--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@
   position: absolute;
   top: 70px;
   right: 0;
-  background: #505050;
+  background: #555555;
   z-index: 10;
   height: 0;
   overflow: hidden;
@@ -120,7 +120,7 @@
   cursor: default;
 }
 
-.hamburgerMenuContainer li a:hover {
+.hamburgerMenuContainer li:hover {
   background: #505050;
 }
 
